test/dashboard/k8s/deployment.yaml

apiVersion: v1
kind: Service
metadata:
  labels:
    app: bedrock-dashboard
  name: bedrock-dashboard
  namespace: bedrock
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8081
  selector:
    app: bedrock-dashboard
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: bedrock-dashboard
  name: bedrock-dashboard
  namespace: bedrock
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bedrock-dashboard
  template:
    metadata:
      labels:
        app: bedrock-dashboard
    spec:
      containers:
      - name: api
        image: 
        imagePullPolicy: Always
        ports:
        - containerPort: 8081
      automountServiceAccountToken: false
